--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,6 +7,7 @@
 @import "body.scss";
 @import "check-tel-message.scss";
 @import "container.scss";
+@import "container-page.scss";
 @import "custom-input.scss";
 @import "custom-label.scss";
 @import "custom-textarea.scss";
@@ -19,6 +20,7 @@
 @import "index-logo.scss";
 @import "input-wrapper.scss";
 @import "interest.scss";
+@import "hr.scss";
 @import "main-footer.scss";
 @import "main-form.scss";
 @import "main-nav.scss";
@@ -28,5 +30,6 @@
 @import "photo-block.scss";
 @import "search.scss";
 @import "slogan.scss";
+@import "switch-lang.scss";
 @import "video.scss";
 @import "video-presentation.scss";
