--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -14,6 +14,11 @@ $padding: 0 20px;
 
 
 // Colors
+
+$main-dark-blue: #051471; /* Основной темно-синий цвет для кнопок */
+$main-dark-blue-hover: #4458D6; /* Чуть более светлый цвет для наведения */
+$main-dark-blue-2: #0F25AE; /* Чуть более светлый основной цвет */
+
 $white: #ffffff;
 $white-disabled: rgba(255, 255, 255, 0.3);
 $whitesmoke: #eeeeee;
