--- a/sass/page-header.scss
+++ b/sass/page-header.scss
@@ -18,10 +18,11 @@
 
 @media (min-width: $tablet-widths) {
   .page-header {
-    min-height: 531px;
+    min-height: 432px;
     background-image: url("../img/index-header-image-tablet@1x.jpg");
     background-size: cover;
     background-size: 768px auto;
+    background-position: 50% 0%;
 }
 }
 
@@ -35,11 +36,12 @@
   .page-header {
     box-sizing: border-box;
     width: 100%;
-    min-height: 675px;
+    min-height: 475px;
     margin: 0 auto;
     padding: 0;
     background-image: url("../img/index-header-image-desktop@1x.jpg");
     background-size: 1200px auto;
+    background-position: 50% 0%;
 }
 }
 
