--- a/sass/container.scss
+++ b/sass/container.scss
@@ -2,6 +2,7 @@
     margin: auto;
     width: 320px;
     background: #fff;
+    border-radius: 1px 1px 50px 50px;
 }
 
 @media (min-width: $tablet-widths) {
