--- a/sass/style.scss
+++ b/sass/style.scss
@@ -13,10 +13,12 @@
 @import "custom-textarea.scss";
 @import "features.scss";
 @import "feedback-popup.scss";
+@import "footer.scss";
 @import "form-button.scss";
 @import "form-fields.scss";
 @import "form-sign.scss";
 @import "form-submit-button.scss";
+@import "games-preview.scss";
 @import "index-logo.scss";
 @import "input-wrapper.scss";
 @import "interest.scss";
@@ -24,6 +26,7 @@
 @import "main-footer.scss";
 @import "main-form.scss";
 @import "main-nav.scss";
+@import "mission-studio.scss";
 @import "modal-box.scss";
 @import "page.scss";
 @import "page-header.scss";
@@ -31,5 +34,6 @@
 @import "search.scss";
 @import "slogan.scss";
 @import "switch-lang.scss";
+@import "trailers.scss";
 @import "video.scss";
 @import "video-presentation.scss";
