--- a/sass/games-preview.scss
+++ b/sass/games-preview.scss
@@ -31,9 +31,12 @@
 }
 
 .near-photo-text-1 {
-  padding: 0px 25px;
+  padding: 0px 27px;
   line-height: 1.25;
   margin-top: 20px;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 900;
 }
 
 .near-photo-text-2 {
@@ -65,7 +68,10 @@
   margin: 0px;
   padding: 0px;
   line-height: 1.5;
-  font-size: 13px;
+  font-size: 14px;
+  text-transform: uppercase;
+  font-weight: 900;
+  letter-spacing: 1.2px;
 }
 
 .sort-column-1-link:hover {
@@ -88,7 +94,7 @@
 .steam-btn {
   float: left;
   margin: 15px 10px;
-  padding: 10px 20px;
+  padding: 14px 20px 6px 20px;
   text-decoration: none;
   color: #fff;
   background-color: #051471;
@@ -106,12 +112,12 @@
 
 .steam-btn-barbarian {
   margin: 15px 3px 15px 3px;
-  padding: 10px 9px;
+  padding: 12.5px 8px 7.5px 10px;
 }
 
 .steam-btn-barbarian-google {
   margin: 15px 6px 15px 3px;
-  padding: 3px 9px;
+  padding: 6.5px 9px 0px 9px;
 }
 
 /*Дикий остров*/
