--- a/css/style.css
+++ b/css/style.css
@@ -697,9 +697,12 @@ input[type=email] {
   color: #bdbbbc; }
 
 .near-photo-text-1 {
-  padding: 0px 25px;
+  padding: 0px 27px;
   line-height: 1.25;
-  margin-top: 20px; }
+  margin-top: 20px;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 900; }
 
 .near-photo-text-2 {
   padding-top: 5px;
@@ -727,7 +730,10 @@ input[type=email] {
   margin: 0px;
   padding: 0px;
   line-height: 1.5;
-  font-size: 13px; }
+  font-size: 14px;
+  text-transform: uppercase;
+  font-weight: 900;
+  letter-spacing: 1.2px; }
 
 .sort-column-1-link:hover {
   background-color: #4458D6;
@@ -745,7 +751,7 @@ input[type=email] {
 .steam-btn {
   float: left;
   margin: 15px 10px;
-  padding: 10px 20px;
+  padding: 14px 20px 6px 20px;
   text-decoration: none;
   color: #fff;
   background-color: #051471;
@@ -760,11 +766,11 @@ input[type=email] {
 
 .steam-btn-barbarian {
   margin: 15px 3px 15px 3px;
-  padding: 10px 9px; }
+  padding: 12.5px 8px 7.5px 10px; }
 
 .steam-btn-barbarian-google {
   margin: 15px 6px 15px 3px;
-  padding: 3px 9px; }
+  padding: 6.5px 9px 0px 9px; }
 
 /*Дикий остров*/
 .features-2 {
@@ -1526,7 +1532,28 @@ hr::after {
     fill: #333333; }
   .video-presentation__icon:focus, .video-presentation__icon:active {
     fill: #c1c1c1; }
-  @media (min-width: 768px){
+
+.vk-group-section__text-position {
+  margin: 0 auto; }
+
+.vk-group-section__text {
+  display: block;
+  width: 635px;
+  color: white;
+  padding: 10px 5px;
+  color: white;
+  text-transform: none;
+  text-indent: 15px;
+  background-color: #0F25AE;
+  border-radius: 10px;
+  text-align: center; }
+
+#vk_groups,
+#vk_groups iframe {
+  width: 100% !important;
+  height: 500px !important; }
+
+@media (min-width: 768px){
   .advertising-sign{
     padding: 25px 100px 25px 100px; }
   .advertising-sign__title{
@@ -2250,8 +2277,16 @@ hr::after {
     order: -1; }
   .video-presentation__icon--video-subtitles{
     margin: 0;
-    margin-right: 30px; } }
-  @media (min-width: 1200px){
+    margin-right: 30px; }
+  .vk-group-section__text-position{
+    width: 500px; }
+  .vk-group-section__text{
+    width: 500px; }
+  .vk-group-section__widget-position{
+    width: 761.5px;
+    height: 500px; } }
+
+@media (min-width: 1200px){
   .advertising-sign{
     padding: 25px 350px 25px 350px; }
   .advertising-sign__title{
@@ -2891,8 +2926,16 @@ hr::after {
   .video-presentation__inner{
     max-width: 800px; }
   .video-presentation__slider{
-    max-width: 540px; } }
-  @media (max-width: 767px){
+    max-width: 540px; }
+  .vk-group-section__text-position{
+    width: 700px; }
+  .vk-group-section__text{
+    width: 700px; }
+  .vk-group-section__widget-position{
+    width: 1194px;
+    height: 500px; } }
+
+@media (max-width: 767px){
   .container-page{
     width: 320px; }
   .main-footer-page{
@@ -3019,27 +3062,41 @@ hr::after {
   .trailers__video{
     width: 315px;
     height: 180px;
-    padding-bottom: 10px; } }
-  @media (min-width: 768px) and (min-width: 768px){
+    padding-bottom: 10px; }
+  .vk-group-section__text-position{
+    width: 300px; }
+  .vk-group-section__text{
+    width: 300px;
+    padding: 10px 0px;
+    text-align: inherit; }
+  .vk-group-section__widget-position{
+    width: 313px;
+    height: 500px; } }
+
+@media (min-width: 768px) and (min-width: 768px){
   .main-form__wrapper{
     width: 84%;
     max-width: 960px; }
   .video-presentation__wrapper{
     width: 84%;
     max-width: 960px; } }
-  @media (min-width: 768px) and (min-width: 1200px){
+
+@media (min-width: 768px) and (min-width: 1200px){
   .main-form__wrapper{
     width: 80%;
     max-width: 1200px; }
   .video-presentation__wrapper{
     width: 80%;
     max-width: 1200px; } }
-  @media (max-width: 767px) and (-webkit-min-device-pixel-ratio: 1.5), (max-width: 767px) and (min-resolution: 144dpi), (max-width: 767px) and (min-resolution: 1.5dppx){
+
+@media (max-width: 767px) and (-webkit-min-device-pixel-ratio: 1.5), (max-width: 767px) and (min-resolution: 144dpi), (max-width: 767px) and (min-resolution: 1.5dppx){
   .page-header{
     background-image: url("../img/index-header-image-mobile@1x.jpg"); } }
-  @media (min-width: 768px) and (-webkit-min-device-pixel-ratio: 1.5), (min-width: 768px) and (min-resolution: 144dpi), (min-width: 768px) and (min-resolution: 1.5dppx){
+
+@media (min-width: 768px) and (-webkit-min-device-pixel-ratio: 1.5), (min-width: 768px) and (min-resolution: 144dpi), (min-width: 768px) and (min-resolution: 1.5dppx){
   .page-header{
     background-image: url("../img/index-header-image-tablet@1x.jpg"); } }
-  @media (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 1.5), (min-width: 1200px) and (min-resolution: 144dpi), (min-width: 1200px) and (min-resolution: 1.5dppx){
+
+@media (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 1.5), (min-width: 1200px) and (min-resolution: 144dpi), (min-width: 1200px) and (min-resolution: 1.5dppx){
   .page-header{
     background-image: url("../img/index-header-image-desktop@1x.jpg"); } }
