--- a/sass/page.scss
+++ b/sass/page.scss
@@ -2,6 +2,6 @@
   background-color: #00472E;
   background-image: url("../img/nature.jpg");
   background-repeat: no-repeat;
-  background-size: cover;
+  /**background-size: cover;**/
   background-attachment: fixed;
 }
