--- a/css/style.css
+++ b/css/style.css
@@ -701,7 +701,7 @@ input[type=email] {
   color: #bdbbbc; }
 
 .near-photo-text-1 {
-  padding: 0px 25px;
+  padding: 0px 20px;
   line-height: 1.25;
   margin-top: 20px;
   text-align: center;
@@ -734,10 +734,10 @@ input[type=email] {
   margin: 0px;
   padding: 0px;
   line-height: 1.5;
-  font-size: 13px;
+  font-size: 12px;
   text-transform: uppercase;
   font-weight: 900;
-  letter-spacing: 1px; }
+  letter-spacing: 0.9px; }
 
 .sort-column-1-link:hover {
   background-color: #4458D6;
@@ -748,7 +748,7 @@ input[type=email] {
 
 .sort-column-1-link-barbarian {
   margin: 15px 3px 15px 6px;
-  padding: 11px 10px;
+  padding: 14px 10px;
   width: 70px; }
 
 /*Кнопка steam*/
@@ -1556,7 +1556,7 @@ hr::after {
   background-color: #0F25AE;
   border-radius: 10px;
   text-align: center;
-  font-size: 20px; }
+  font-size: 18px; }
 
 #vk_groups,
 #vk_groups iframe {
@@ -3064,7 +3064,7 @@ hr::after {
     border-radius: 40px 5px; }
   .rus-switch{
     position: relative;
-    margin: 140px 45px 0px 0px;
+    margin: 140px 40px 0px 0px;
     left: -70px;
     top: 70px;
     border-radius: 5px 40px;
@@ -3085,8 +3085,7 @@ hr::after {
     width: 300px; }
   .vk-group-section__text{
     width: 300px;
-    padding: 10px 0px;
-    text-align: inherit; }
+    padding: 10px 0px; }
   .vk-group-section__widget-position{
     width: 313px;
     height: 500px; } }
