--- a/sass/trailers.scss
+++ b/sass/trailers.scss
@@ -1,3 +1,7 @@
+.trailers {
+  margin: 30px 0px;
+}
+
 .trailers__text {
   display: block;
   color: white;
@@ -38,6 +42,10 @@
 }
 
 @media (min-width: $tablet-widths) {
+  .trailers {
+    margin: -10px 0px;
+}
+
   .trailers__text {
     width: 630px;
 }
@@ -49,6 +57,10 @@
 }
 
 @media (min-width: $desktop-widths) {
+  .trailers {
+    margin: -10px 0px;
+}
+
   .trailers__text {
     width: 950px;
 }
