--- a/sass/games-preview.scss
+++ b/sass/games-preview.scss
@@ -57,7 +57,6 @@
 
 .sort-column-1-buttons {
   display: flex;
-  border: 5px solid black;
 }
 
 .sort-column-1-link {
@@ -70,6 +69,10 @@
   background-color: #051471;
   border-radius: 5px;
   text-align: center;
+}
+
+.sort-column-1-link-flex {
+  display: flex;
 }
 
 .sort-column-1-link p {
