--- a/sass/page-header.scss
+++ b/sass/page-header.scss
@@ -1,37 +1,57 @@
-  .page-header {
-    position: relative;
-    max-width: 100%;
-    min-height: 283px;
-    background-color: #dbe9f2;
-    background-image: url("../img/index-header-image-mobile@1x.jpg");
-    background-position: 50% 50%;
-    background-repeat: no-repeat;
-    background-size: 320px auto;
-    overflow: hidden;
-    border: 3px solid black;
-    border-top-style: none;
-    border-bottom-style: none;
+.page-header {
+  position: relative;
+  max-width: 100%;
+  min-height: 283px;
+  background-color: #dbe9f2;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  background-size: 320px auto;
+  overflow: hidden;
+  border: 3px solid black;
+  border-top-style: none;
+  border-bottom-style: none;
+}
+
+@media (max-width: $mobile-widths) {
+  .page-header__index {
+    background-image: url("../img/header-index-mobile@1x.jpg");
+}
+
+  .page-header__soft {
+    background-image: url("../img/header-soft-mobile@1x.jpg");
+}
 }
 
 @media (max-width: $mobile-widths) and (min-resolution: $dpi), (max-width: $mobile-widths) and (min-resolution: $dppx) {
-  .page-header {
-    background-image: url("../img/index-header-image-mobile@1x.jpg");
+  .page-header__index {
+    background-image: url("../img/header-index-mobile@1x.jpg");
+}
+
+  .page-header__soft {
+    background-image: url("../img/header-soft-mobile@1x.jpg");
 }
 }
 
 @media (min-width: $tablet-widths) {
   .page-header {
     min-height: 432px;
-    background-image: url("../img/index-header-image-tablet@1x.jpg");
     background-size: cover;
     background-size: 768px auto;
     background-position: 50% 0%;
 }
+
+  .page-header__index {
+    background-image: url("../img/header-index-tablet@1x.jpg");
+}
+
+  .page-header__soft {
+    background-image: url("../img/header-soft-tablet@1x.jpg");
+}
 }
 
 @media (min-width: $tablet-width) and (min-resolution: $dpi), (min-width: $tablet-width) and (min-resolution: $dppx) {
-  .page-header {
-    background-image: url("../img/index-header-image-tablet@1x.jpg");
+  .page-header__index {
+    background-image: url("../img/header-index-tablet@1x.jpg");
 }
 }
 
@@ -42,14 +62,21 @@
     min-height: 475px;
     margin: 0 auto;
     padding: 0;
-    background-image: url("../img/index-header-image-desktop@1x.jpg");
     background-size: 1200px auto;
-    background-position: 50% 0%;
+    background-position: 50% 75%;
+}
+
+  .page-header__index {
+    background-image: url("../img/header-index-desktop@1x.jpg");
+}
+
+  .page-header__soft {
+    background-image: url("../img/header-soft-tablet@1x.jpg");
 }
 }
 
 @media (min-width: $desktop-widths) and (min-resolution: $dpi), (min-width: $desktop-widths) and (min-resolution: $dppx) {
-  .page-header {
-    background-image: url("../img/index-header-image-desktop@1x.jpg");
+  .page-header__index {
+    background-image: url("../img/header-index-desktop@1x.jpg");
 }
 }
